# ajiaco

./: .gitignore  .travis.yml  LICENSE  README.md  ajc.py  pyproject.toml  setup.py  test.py  tox.ini
ajiaco/: __init__.py  app.py  orm.py  res.py  utils.py
ajiaco/cli/: __init__.py  builtins.py  cli_logo.py  manager.py  register.py
ajiaco/core/: app.py
ajiaco/storage/: __init__.py  models.py  storage.py
ajiaco/utils/: rtc.py  sysinfo.py
ajiaco/webapp/: __init__.py  middlewares.py  routes.py  webapp.py
ajiaco/webapp/static/: ajiaco.css
ajiaco/webapp/static/simple_sidebar/: simple-sidebar.css
ajiaco/webapp/static/tabs/: tabs.css  tabs.js
ajiaco/webapp/templates/: Base.html  Error.html
ajiaco/webapp/templates/admin/: About.html  BaseAdmin.html  Demo.html
ajiaco/webapp/templates/play/: BasePlay.html  BaseShow.html  DefaultShow.html
ajiaco/webapp/templates/sessions/: BaseSessions.html  CreateSession.html  Show.html
ajiaco/webapp/templates/sessions/Show/: data.html  links.html  monitor.html
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: ajiaco.rst
tests/: test_orm.py
