[tool.black]
line-length = 79
target-version = ["py310"]


[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
testpaths = ["tests"]

# =============================================================================
# PACKAGING
# =============================================================================

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ajiaco"
version = "0.5"
authors = [{ name = "Juan B Cabral & QuatroPe", email = "jbcabral@unc.edu.ar" }]
readme = "README.md"
license = { file = "LICENSE.txt" }
description = ""
keywords = ["social-science"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
]
urls = { Homepage = "https://scikit-criteria.quatrope.org/", Repository = "https://github.com/quatrope/scikit-criteria" }
dependencies = [
    "sqlalchemy",
    "ujson",
    "ipython",
    "attrs",
    "pydantic",
    "typer",
    "starlette",
    "jinja2",
    "seaborn>=0.13,<0.14",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ajioaco", "ajioaco.*"]
namespaces = false
